# github-search-agent

./: .gitignore  README.md  plan.md  pyproject.toml  search_params.json
.github/agents/: github-search.agent.md
github_search_agent/: __init__.py  github_search_tool.py
scripts/: github_search_tool.py
