[project]
name = "github-search-agent"
version = "1.0.0"
description = "A GitHub repository search tool for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GitHub Search Agent Contributors"}
]
dependencies = [
    "httpx>=0.27.0",
]

[project.scripts]
github-search = "github_search_agent.github_search_tool:main"

[project.urls]
Repository = "https://github.com/JinduSama/github-search-agent"
Issues = "https://github.com/JinduSama/github-search-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = []

[tool.black]
line-length = 88
target-version = ['py310']
